--- a/src.css
+++ b/src.css
@@ -20,6 +20,10 @@ body {
     color: var(--primary-color);
 }
 
+.clubimage {
+    max-width: 700px;
+}
+
 footer{
     text-align: center;
     color: white;
