--- a/src.css
+++ b/src.css
@@ -12,7 +12,7 @@ body {
     display: block;
     margin: 0 auto;
     text-align: center;
-    max-width: 800px;
+    max-width: 750px;
     margin-top:50px;
     background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%); 
 /*  background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); more blueish*/
@@ -78,4 +78,26 @@ footer a {
 footer a:hover {
     color: yellow;
     text-decoration: underline;
+}
+
+@media screen and (max-width: 820px) {
+    .main {
+            max-width: 90%;
+        }
+
+    h1 {
+            font-size: 30px;
+        }
+
+        h2 {
+            font-size: 24px;
+        }
+
+        h3 {
+            font-size: 20px;
+        }
+
+        .paragraph {
+            font-size: 18px;
+        }
 }
